examples/test/testpolicy12001.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12001
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key9: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value28
          key14: value15
          key48: value24
      podSelector:
        matchLabels:
          key30: value3
          key7: value31
